[project]
name = "busglite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.6.0",
    "diffusers>=0.36.0",
    "ftfy>=6.3.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "modelscope[framework]>=1.33.0",
    "peft>=0.18.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
    "wandb>=0.24.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
